[package]
name = "pinbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2", features = ["model", "client", "gateway", "rustls_backend"], default-features = false }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
